--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,22 @@
 page-home {
+    #main-content {
+        position:absolute;
+        left: 0;
+        right: 0;
+        margin:0 auto;
+        top:50%;
+        transform:translateY(-50%);
+
+        p {
+            font-size: 2rem;
+            color: #c1c1c1;
+        }
+    }
+
+    .logo {
+        width: 50%;
+        margin-bottom: 30px;
+    }
+
 
 }
